stages/stage2/set3-traefik-dashboard/k8s/networkpolicies/apps-allow-notification-app-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-notification-app-to-redis
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: notification
      ports:
        - protocol: TCP
          port: 6379
